--- a/_config.yml
+++ b/_config.yml
@@ -13,26 +13,31 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Home
+email: orlane.lequellennec@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+github_username: orlross
 search: true
 
 # Build settings
 markdown: kramdown
+# On peut fixer la version
 remote_theme: mmistakes/minimal-mistakes
+minimal_mistakes_skin: "contrast"
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
+google-site-verification: # à remplir avec google reference id
+
+# Rajouter les dossiers pour qu'ils soient pris en compte sur le site web
+# ["_pages", "_data", "_reminders", "_layouts", "_teachings"]
 include:
   - _pages
 
