--- a/_config.yml
+++ b/_config.yml
@@ -63,34 +63,51 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name: "Orlane Le Quellennec"
+  avatar: # "https://scholar.googleusercontent.com/citations?view_op=view_photo&user=BWIOpfEAAAAJ&citpid=1&authuser=1"
+  bio: "PhD Student in statistics" # Note: Markdown is allowed
+  location: "Montpellier, France"
+  email            : "orlane.lequellennec@outlook.fr"
+  uri              :
+  home             : # null (default), "absolute or relative url to link to author home"
+  bitbucket        :
+  codepen          :
+  dribbble         :
+  flickr           :
+  facebook         :
+  foursquare       :
+  github           : # "tanglef"
+  gitlab           :
+  google_plus      :
+  keybase          :
+  instagram        : #"tanguy_lef"
+  lastfm           :
+  pinterest        :
+  soundcloud       :
+  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
+  tumblr           :
+  twitter          :
+  vine             :
+  weibo            :
+  xing             :
+  youtube          : # maybe...
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label: "Reddit"
+      icon: "fab fa-fw fa-reddit"
+      url: # "https://www.reddit.com/user/tanglef"
 
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: # "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: # "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: # "https://instagram.com/"
 
 defaults:
   # _posts
