--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+  - title: "Research"
+    url: /teachings/
+  - title: "Teachings"
+    url: /teachings/
+  - title: "CV"
+    url: /cv/
+  # - title: "About"
+    # url: /about/
