ajout de la page research

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
   - title: "Research"
-    url: /teachings/
+    url: /research/
   - title: "Teachings"
     url: /teachings/
   - title: "CV"
