--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,10 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  # - jekyll-feed
+
 
 author:
   name: "Orlane Le Quellennec"
