--- a/_config.yml
+++ b/_config.yml
@@ -52,12 +52,22 @@ include: ["_pages", "_teachings", "_data", "_layouts"]
 
 # Plugins (previously gems:)
 plugins:
-  #- jekyll-paginate
-  #- jekyll-sitemap
-  #- jekyll-gist
-  #- jemoji
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jemoji
   - jekyll-include-cache
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-coffeescript
+  - jekyll-commonmark-ghpages
+  - jekyll-github-metadata
+  - jekyll-relative-links
+  - jekyll-optional-front-matter
+  - jekyll-readme-index
+  - jekyll-default-layout
+  - jekyll-titles-from-headings
+  - jekyll-remote-theme
 
 
 author:
