--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ google-site-verification: "rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI"
 
 # Rajouter les dossiers pour qu'ils soient pris en compte sur le site web
 # ["_pages", "_data", "_reminders", "_layouts", "_teachings"]
-include: ["_pages", "_teachings", "_data"]
+include: ["_pages", "_teachings", "_data", "_layouts"]
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
