--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ search: true
 markdown: kramdown
 # On peut fixer la version
 remote_theme: mmistakes/minimal-mistakes
-minimal_mistakes_skin: "sunrise"
+minimal_mistakes_skin: "dirt"
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
