--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Website page.
 twitter_username: username
 github_username: orlross
-github: [metadata]
+#github: [metadata]
 search: true
-baseurl: ""
-url: "https://orlross.github.io/"
-logo: <a href="https://www.flaticon.com/free-icons/rain" title="rain icons">Rain icons created by Freepik - Flaticon</a>
+#baseurl: ""
+#url: "https://orlross.github.io/"
+#logo: <a href="https://www.flaticon.com/free-icons/rain" title="rain icons">Rain icons created by Freepik - Flaticon</a>
 
 
 # Build settings
@@ -100,6 +100,8 @@ author:
   bio: "PhD Student in statistics" # Note: Markdown is allowed
   location: "Montpellier, France"
   email            : "orlane.lequellennec@gmail.com"
+  uri :
+  home :  # null (default), "absolute or relative url to link to author home"
   github: "orlross"
   gitlab: "orlane.le-quellennec"
   links:
