--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Website page.
 twitter_username: username
 github_username: orlross
-#github: [metadata]
+github: [metadata]
 search: true
 #baseurl: ""
 #url: "https://orlross.github.io/"
@@ -36,6 +36,10 @@ permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
+plugins:
+  - jekyll-feed
+  - jekyll-include-cache
 
 google-site-verification: "rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI"
 # "rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI"
@@ -75,23 +79,23 @@ collections:
 
 
 # Plugins (previously gems:)
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jemoji
-  - jekyll-include-cache
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-coffeescript
-  - jekyll-commonmark-ghpages
-  - jekyll-github-metadata
-  - jekyll-relative-links
-  - jekyll-optional-front-matter
-  - jekyll-readme-index
-  - jekyll-default-layout
-  - jekyll-titles-from-headings
-  - jekyll-remote-theme
+# plugins:
+  # - jekyll-paginate
+  # - jekyll-sitemap
+  # - jekyll-gist
+  # - jemoji
+  # - jekyll-include-cache
+  # - jekyll-feed
+  # - jekyll-seo-tag
+  # - jekyll-coffeescript
+  # - jekyll-commonmark-ghpages
+  # - jekyll-github-metadata
+  # - jekyll-relative-links
+  # - jekyll-optional-front-matter
+  # - jekyll-readme-index
+  # - jekyll-default-layout
+  # - jekyll-titles-from-headings
+  # - jekyll-remote-theme
 
 
 author:
