--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ search: true
 markdown: kramdown
 # On peut fixer la version
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-minimal_mistakes_skin: "air"
+minimal_mistakes_skin: "dirt"
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -103,7 +103,7 @@ author:
   avatar: "/_data/image/pp.jpg"
   bio: "PhD Student in statistics" # Note: Markdown is allowed
   location: "Montpellier, France"
-  email            : "orlane.lequellennec@gmail.com"
+  email : "orlane.lequellennec@gmail.com"
   # uri :
   home :  # null (default), "absolute or relative url to link to author home"
   github: "orlross"
