--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ collections:
 author:
   name: "Orlane Rossini"
   avatar: "/_data/image/pp.jpg"
-  bio: "PhD Student in statistics" # Note: Markdown is allowed
+  bio: "PhD fellow in biotatistics" # Note: Markdown is allowed
   location: "Montpellier, France"
   email : "orlane.rossini22@gmail.com"
   # uri :
